SPARK-307 Chat History not showing this week.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@4548 b35dd754-fafc-0310-a699-88a17e54d16e