@@ -16,24 +16,35 @@ import org.jivesoftware.smack.ConnectionListener;
 import org.jivesoftware.smack.packet.Message;
 import org.jivesoftware.smack.util.StringUtils;
 import org.jivesoftware.spark.SparkManager;
-import org.jivesoftware.spark.component.VerticalFlowLayout;
-import org.jivesoftware.spark.component.panes.CollapsiblePane;
-import org.jivesoftware.spark.component.panes.CollapsiblePaneListener;
+import org.jivesoftware.spark.component.BackgroundPanel;
 import org.jivesoftware.spark.plugin.ContextMenuListener;
-import org.jivesoftware.spark.ui.ChatContainer;
 import org.jivesoftware.spark.ui.ChatRoom;
 import org.jivesoftware.spark.ui.ChatRoomButton;
 import org.jivesoftware.spark.ui.ChatRoomListener;
 import org.jivesoftware.spark.ui.ContactItem;
 import org.jivesoftware.spark.ui.ContactList;
 import org.jivesoftware.spark.ui.TranscriptWindow;
+import org.jivesoftware.spark.ui.VCardPanel;
 import org.jivesoftware.spark.ui.rooms.ChatRoomImpl;
 import org.jivesoftware.spark.util.GraphicUtils;
-import org.jivesoftware.spark.util.ModelUtil;
 import org.jivesoftware.spark.util.SwingWorker;
 import org.jivesoftware.spark.util.log.Log;
 import org.jivesoftware.sparkimpl.settings.local.LocalPreferences;
 import org.jivesoftware.sparkimpl.settings.local.SettingsManager;
+
+import java.awt.BorderLayout;
+import java.awt.Color;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+import java.io.File;
+import java.text.SimpleDateFormat;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Date;
+import java.util.Iterator;
+import java.util.List;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
@@ -46,34 +57,12 @@ import javax.swing.text.SimpleAttributeSet;
 import javax.swing.text.StyleConstants;
 import javax.swing.text.StyledDocument;
 
-import java.awt.BorderLayout;
-import java.awt.Color;
-import java.awt.Dimension;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.io.File;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Collection;
-import java.util.Date;
-import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-
 /**
  * The <code>ChatTranscriptPlugin</code> is responsible for transcript handling within Spark.
+ *
+ * @author Derek DeMoro
  */
 public class ChatTranscriptPlugin implements ChatRoomListener {
-    private String LAST_YEAR = "LAST_YEAR";
-    private String LAST_MONTH = "LAST_MONTH";
-    private String LAST_WEEK = "LAST_WEEK";
-    private String LAST_TWO_MONTHS = "LAST_TWO_MONTHS";
-    private String LAST_SIX_MONTHS = "LAST_SIX_MONTHS";
-    private String BEFORE = "BEFORE";
 
     /**
      * Register the listeners for transcript persistence.
@@ -138,11 +127,7 @@ public class ChatTranscriptPlugin implements ChatRoomListener {
     }
 
     public void persistConversations() {
-        ChatContainer chatRooms = SparkManager.getChatManager().getChatContainer();
-        Collection rooms = chatRooms.getChatRooms();
-        Iterator iter = rooms.iterator();
-        while (iter.hasNext()) {
-            ChatRoom room = (ChatRoom)iter.next();
+        for (ChatRoom room : SparkManager.getChatManager().getChatContainer().getChatRooms()) {
             if (room instanceof ChatRoomImpl) {
                 ChatRoomImpl roomImpl = (ChatRoomImpl)room;
                 if (roomImpl.isActive()) {
@@ -234,12 +219,12 @@ public class ChatTranscriptPlugin implements ChatRoomListener {
                         }
 
                     }
-                    return new Boolean(isNew);
+                    return Boolean.valueOf(isNew);
                 }
 
                 public void finished() {
                     Boolean boo = (Boolean)get();
-                    if (boo.booleanValue()) {
+                    if (boo) {
                         StyledDocument doc = (StyledDocument)roomWindow.getDocument();
                         final SimpleAttributeSet styles = new SimpleAttributeSet();
                         StyleConstants.setFontSize(styles, 12);
@@ -329,173 +314,91 @@ public class ChatTranscriptPlugin implements ChatRoomListener {
     }
 
     private void showHistory(final String jid) {
-        final Map dateMap = new LinkedHashMap();
-        SwingWorker worker = new SwingWorker() {
-            final TranscriptWindow pane = new TranscriptWindow();
 
+        SwingWorker transcriptLoader = new SwingWorker() {
             public Object construct() {
-                ChatTranscript transcript = ChatTranscripts.getChatTranscript(jid);
-                Iterator messages = transcript.getMessages().iterator();
-
-                Calendar cal = Calendar.getInstance();
-                Date now = new Date();
-                cal.setTime(now);
-
-                cal.add(Calendar.DATE, -7);
-
-                Date lastWeek = cal.getTime();
-
-                cal.setTime(now);
-                cal.add(Calendar.MONTH, -1);
-
-                Date lastMonth = cal.getTime();
-
-                cal.setTime(now);
-                cal.add(Calendar.MONTH, -2);
-
-                Date twoMonths = cal.getTime();
-
-                cal.setTime(now);
-
-                cal.add(Calendar.MONTH, -6);
-
-                Date sixMonths = cal.getTime();
-
-                cal.setTime(now);
-
-                cal.add(Calendar.YEAR, -1);
-
-                Date lastYear = cal.getTime();
-
-
-                while (messages.hasNext()) {
-                    HistoryMessage message = (HistoryMessage)messages.next();
-                    Date datePosted = message.getDate();
-
-                    String key = "";
-
-                    if (datePosted.getTime() > lastWeek.getTime()) {
-                        // Add to last week
-                        key = "This Week";
-                    }
-                    else if (datePosted.getTime() > lastMonth.getTime()) {
-                        // Add to last month
-                        key = "One Month";
-                    }
-                    else if (datePosted.getTime() > twoMonths.getTime()) {
-                        // Add to two months
-                        key = "Two Months";
-                    }
-                    else if (datePosted.getTime() > sixMonths.getTime()) {
-                        // Add to six months
-                        key = "Six Months";
-                    }
-                    else if (datePosted.getTime() > lastYear.getTime()) {
-                        // Add to last year.
-                        key = "Year Ago";
-                    }
-                    else {
-                        // Add to before.
-                        key = "More than a year ago";
-                    }
-
-
-                    if (!dateMap.containsKey(key)) {
-                        final List list = new ArrayList();
-                        list.add(message);
-                        dateMap.put(key, list);
-                    }
-                    else {
-                        final List list = (ArrayList)dateMap.get(key);
-                        list.add(message);
-                    }
-                }
-
-                return pane;
+                return ChatTranscripts.getChatTranscript(jid);
             }
 
             public void finished() {
-                final JPanel mainPanel = new JPanel();
-                mainPanel.setLayout(new VerticalFlowLayout(VerticalFlowLayout.TOP, 0, 0, true, false));
-                mainPanel.setBackground(Color.white);
-                JScrollPane scrollPane = new JScrollPane(mainPanel);
+                final JPanel mainPanel = new BackgroundPanel();
 
-                // Iterate through and print dates
-                final Iterator d = dateMap.keySet().iterator();
-                List list = new ArrayList();
-                while (d.hasNext()) {
-                    list.add(d.next());
+                mainPanel.setLayout(new BorderLayout());
+
+                final VCardPanel topPanel = new VCardPanel(jid);
+                mainPanel.add(topPanel, BorderLayout.NORTH);
+
+                final TranscriptWindow window = new TranscriptWindow();
+                final JScrollPane pane = new JScrollPane(window);
+                pane.getVerticalScrollBar().setBlockIncrement(50);
+                pane.getVerticalScrollBar().setUnitIncrement(20);
+
+                mainPanel.add(pane, BorderLayout.CENTER);
+
+
+                ChatTranscript transcript = (ChatTranscript)get();
+                List<HistoryMessage> list = transcript.getMessages();
+                Collections.sort(list, dateComparator);
+
+                for (HistoryMessage message : list) {
+                    String from = message.getFrom();
+                    String nickname = StringUtils.parseName(from);
+                    final SimpleDateFormat formatter = new SimpleDateFormat("MM/dd/yyyy h:mm a");
+                    final String date = formatter.format(message.getDate());
+
+                    String prefix = nickname + " [" + date + "]";
+
+                    if (from.equals(SparkManager.getSessionManager().getJID())) {
+                        window.insertCustomMessage(prefix, message.getBody());
+                    }
+                    else {
+                        window.insertCustomOtherMessage(prefix, message.getBody());
+                    }
+
                 }
 
-                Iterator dates = ModelUtil.reverseListIterator(list.listIterator());
-                while (dates.hasNext()) {
-                    final String date = (String)dates.next();
-
-                    // Create collapsible pane
-                    final CollapsiblePane pane = new CollapsiblePane(date);
-
-                    pane.setCollapsed(true);
-
-                    mainPanel.add(pane);
-                    pane.addCollapsiblePaneListener(new CollapsiblePaneListener() {
-                        boolean expanded = false;
-
-                        public void paneExpanded() {
-                            if (!expanded) {
-                                List messages = (List)dateMap.get(date);
-                                final TranscriptWindow window = new TranscriptWindow() {
-                                    public Dimension getPreferredSize() {
-                                        final Dimension size = super.getPreferredSize();
-                                        size.width = 0;
-                                        return size;
-                                    }
-                                };
-
-                                Iterator messageIter = messages.iterator();
-                                while (messageIter.hasNext()) {
-                                    HistoryMessage m = (HistoryMessage)messageIter.next();
-                                    String from = m.getFrom();
-                                    String nickname = StringUtils.parseName(from);
-                                    final SimpleDateFormat formatter = new SimpleDateFormat("MM/dd/yyyy h:mm a");
-                                    final String date = formatter.format(m.getDate());
-
-                                    String prefix = nickname + " [" + date + "]";
-
-                                    if (from.equals(SparkManager.getSessionManager().getJID())) {
-                                        window.insertCustomMessage(prefix, m.getBody());
-                                    }
-                                    else {
-                                        window.insertCustomOtherMessage(prefix, m.getBody());
-                                    }
-                                }
-                                pane.setContentPane(window);
-                                expanded = true;
-                            }
-                        }
-
-                        public void paneCollapsed() {
-                        }
-                    });
-
-
+                // Handle no history
+                if (transcript.getMessages().size() == 0) {
+                    window.setText("There is no current chat history.");
                 }
 
                 final JFrame frame = new JFrame("History For " + jid);
                 frame.setIconImage(SparkRes.getImageIcon(SparkRes.HISTORY_16x16).getImage());
                 frame.getContentPane().setLayout(new BorderLayout());
 
-                scrollPane.getVerticalScrollBar().setBlockIncrement(50);
-                scrollPane.getVerticalScrollBar().setUnitIncrement(20);
-
-                frame.getContentPane().add(scrollPane, BorderLayout.CENTER);
+                frame.getContentPane().add(mainPanel, BorderLayout.CENTER);
                 frame.pack();
                 frame.setSize(600, 400);
+                window.setCaretPosition(0);
                 GraphicUtils.centerWindowOnScreen(frame);
                 frame.setVisible(true);
 
             }
         };
 
-        worker.start();
+        transcriptLoader.start();
     }
+
+    /**
+     * Sort HistoryMessages by date.
+     */
+    final Comparator<HistoryMessage> dateComparator = new Comparator() {
+        public int compare(Object o1, Object o2) {
+            final HistoryMessage historyMessageOne = (HistoryMessage)o1;
+            final HistoryMessage historyMessageTwo = (HistoryMessage)o2;
+
+            long time1 = historyMessageOne.getDate().getTime();
+            long time2 = historyMessageTwo.getDate().getTime();
+
+            if (time1 < time2) {
+                return 1;
+            }
+            else if (time1 > time2) {
+                return -1;
+            }
+            return 0;
+
+        }
+    };
+
 }
